I have completed the design of the UI, and completed the UI logic. Except for adding past operation answers onlick of view.

--- a/app/src/main/res/layout/fragment_expanded_interface.xml
+++ b/app/src/main/res/layout/fragment_expanded_interface.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewmodel"
             type="kevin.jo.ramos.MainViewModel" />
@@ -34,10 +34,10 @@
             android:id="@+id/operation_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:background="@color/obsidian_100"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
-            android:layout_marginTop="16dp"
             android:textAlignment="textEnd"
             android:textColor="@color/white"
             android:textSize="50sp"
@@ -67,10 +67,11 @@
         <Button
             android:id="@+id/button_0"
             style="@style/scientific_button"
-            android:text="@string/button0_text"
             android:background="@color/Grey_100"
-            app:backgroundTint="@null"
+            android:text="@string/button0_text"
             android:textColor="@color/purple_100"
+            android:textSize="23sp"
+            app:backgroundTint="@null"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/button_point"
             app:layout_constraintHorizontal_bias="0.5"
@@ -80,10 +81,11 @@
         <Button
             android:id="@+id/button_1"
             style="@style/scientific_button"
-            android:text="@string/button1_text"
             android:background="@color/Grey_100"
-            app:backgroundTint="@null"
+            android:text="@string/button1_text"
             android:textColor="@color/purple_100"
+            android:textSize="23sp"
+            app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_e"
             app:layout_constraintEnd_toStartOf="@+id/button_2"
             app:layout_constraintHorizontal_bias="0.5"
@@ -93,10 +95,11 @@
         <Button
             android:id="@+id/button_2"
             style="@style/scientific_button"
-            android:text="@string/button2_text"
             android:background="@color/Grey_100"
-            app:backgroundTint="@null"
+            android:text="@string/button2_text"
             android:textColor="@color/purple_100"
+            android:textSize="23sp"
+            app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_0"
             app:layout_constraintEnd_toStartOf="@+id/button_3"
             app:layout_constraintHorizontal_bias="0.5"
@@ -106,10 +109,11 @@
         <Button
             android:id="@+id/button_3"
             style="@style/scientific_button"
-            android:text="@string/button3_text"
             android:background="@color/Grey_100"
-            app:backgroundTint="@null"
+            android:text="@string/button3_text"
             android:textColor="@color/purple_100"
+            android:textSize="23sp"
+            app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_point"
             app:layout_constraintEnd_toStartOf="@+id/button_add"
             app:layout_constraintHorizontal_bias="0.5"
@@ -119,10 +123,11 @@
         <Button
             android:id="@+id/button_4"
             style="@style/scientific_button"
-            android:text="@string/button4_text"
             android:background="@color/Grey_100"
-            app:backgroundTint="@null"
+            android:text="@string/button4_text"
             android:textColor="@color/purple_100"
+            android:textSize="23sp"
+            app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_1"
             app:layout_constraintEnd_toStartOf="@+id/button_5"
             app:layout_constraintHorizontal_bias="0.5"
@@ -132,8 +137,9 @@
         <Button
             android:id="@+id/button_inverse"
             style="@style/scientific_button"
-            android:text="1/x"
             android:background="@color/Grey_300"
+            android:text="1/x"
+            android:textAllCaps="false"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_Pi"
             app:layout_constraintEnd_toStartOf="@+id/button_4"
@@ -144,10 +150,11 @@
         <Button
             android:id="@+id/button_5"
             style="@style/scientific_button"
-            android:text="@string/button5_text"
             android:background="@color/Grey_100"
-            app:backgroundTint="@null"
+            android:text="@string/button5_text"
             android:textColor="@color/purple_100"
+            android:textSize="23sp"
+            app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_2"
             app:layout_constraintEnd_toStartOf="@+id/button_6"
             app:layout_constraintHorizontal_bias="0.5"
@@ -157,10 +164,11 @@
         <Button
             android:id="@+id/button_6"
             style="@style/scientific_button"
-            android:text="@string/button6_text"
             android:background="@color/Grey_100"
-            app:backgroundTint="@null"
+            android:text="@string/button6_text"
             android:textColor="@color/purple_100"
+            android:textSize="23sp"
+            app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_3"
             app:layout_constraintEnd_toStartOf="@+id/button_subtract_advanced"
             app:layout_constraintHorizontal_bias="0.5"
@@ -171,10 +179,12 @@
             android:id="@+id/button_7"
             style="@style/scientific_button"
             android:layout_height="0dp"
-            android:text="@string/button7_text"
             android:background="@color/Grey_100"
-            app:backgroundTint="@null"
+
+            android:text="@string/button7_text"
             android:textColor="@color/purple_100"
+            android:textSize="23sp"
+            app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_4"
             app:layout_constraintEnd_toStartOf="@+id/button_8"
             app:layout_constraintHorizontal_bias="0.5"
@@ -184,10 +194,11 @@
         <Button
             android:id="@+id/button_8"
             style="@style/scientific_button"
-            android:text="@string/button8_text"
             android:background="@color/Grey_100"
-            app:backgroundTint="@null"
+            android:text="@string/button8_text"
             android:textColor="@color/purple_100"
+            android:textSize="23sp"
+            app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_5"
             app:layout_constraintEnd_toStartOf="@+id/button_9"
             app:layout_constraintHorizontal_bias="0.5"
@@ -198,10 +209,11 @@
         <Button
             android:id="@+id/button_9"
             style="@style/scientific_button"
-            android:text="@string/button9_text"
             android:background="@color/Grey_100"
-            app:backgroundTint="@null"
+            android:text="@string/button9_text"
             android:textColor="@color/purple_100"
+            android:textSize="23sp"
+            app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_6"
             app:layout_constraintEnd_toStartOf="@+id/button_multiply"
             app:layout_constraintHorizontal_bias="0.5"
@@ -212,9 +224,9 @@
             android:id="@+id/button_clear"
             style="@style/scientific_button"
             android:background="@color/Grey_200"
-            app:backgroundTint="@null"
-
             android:text="@string/buttonClear_text"
+
+            app:backgroundTint="@null"
 
             app:layout_constraintBottom_toTopOf="@+id/button_7"
             app:layout_constraintEnd_toStartOf="@+id/button_delete"
@@ -225,8 +237,8 @@
         <Button
             android:id="@+id/button_point"
             style="@style/scientific_button"
-            android:text="@string/buttonPoint_text"
             android:background="@color/Grey_100"
+            android:text="@string/buttonPoint_text"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/button_equal"
@@ -238,8 +250,8 @@
             android:id="@+id/button_add"
             style="@style/scientific_button"
             android:background="@color/Grey_200"
-            app:backgroundTint="@null"
             android:text="@string/buttonAdd_text"
+            app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_equal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -249,8 +261,8 @@
         <Button
             android:id="@+id/button_subtract_advanced"
             style="@style/scientific_button"
-            android:text="@string/buttonSubtract_text"
             android:background="@color/Grey_200"
+            android:text="@string/buttonSubtract_text"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_add"
             app:layout_constraintEnd_toEndOf="parent"
@@ -261,8 +273,8 @@
         <Button
             android:id="@+id/button_multiply"
             style="@style/scientific_button"
-            android:text="@string/buttonMultiply_text"
             android:background="@color/Grey_200"
+            android:text="@string/buttonMultiply_text"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_subtract_advanced"
             app:layout_constraintEnd_toEndOf="parent"
@@ -274,8 +286,9 @@
             android:id="@+id/button_2nd"
             style="@style/scientific_button"
             android:layout_marginStart="1dp"
-            android:text="2nd"
             android:background="@color/Grey_300"
+            android:text="2nd"
+            android:textAllCaps="false"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_exponent"
             app:layout_constraintEnd_toStartOf="@+id/button_deg_rad"
@@ -286,8 +299,8 @@
         <Button
             android:id="@+id/button_exponent"
             style="@style/scientific_button"
-            android:text="^"
             android:background="@color/Grey_300"
+            android:text="^"
             app:backgroundTint="@null"
 
             app:layout_constraintBottom_toTopOf="@+id/button_square_root"
@@ -299,8 +312,8 @@
         <Button
             android:id="@+id/button_square_root"
             style="@style/scientific_button"
-            android:text="√"
             android:background="@color/Grey_300"
+            android:text="√"
             app:backgroundTint="@null"
 
             app:layout_constraintBottom_toTopOf="@+id/button_factorial"
@@ -312,8 +325,8 @@
         <Button
             android:id="@+id/button_factorial"
             style="@style/scientific_button"
-            android:text="!"
             android:background="@color/Grey_300"
+            android:text="!"
             app:backgroundTint="@null"
 
             app:layout_constraintBottom_toTopOf="@+id/button_inverse"
@@ -326,8 +339,8 @@
             android:id="@+id/button_division"
             style="@style/scientific_button"
             android:layout_height="0dp"
-            android:text="@string/buttonDivide_text"
             android:background="@color/Grey_200"
+            android:text="@string/buttonDivide_text"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_multiply"
             app:layout_constraintEnd_toEndOf="parent"
@@ -338,8 +351,8 @@
         <Button
             android:id="@+id/button_equal"
             style="@style/scientific_button"
-            android:text="@string/buttonEqual_text"
             android:background="@color/purple_100"
+            android:text="@string/buttonEqual_text"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -350,8 +363,8 @@
         <Button
             android:id="@+id/button_blank"
             style="@style/scientific_button"
-            android:text=""
             android:background="@color/Grey_300"
+            android:text=""
             app:backgroundTint="@null"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/button_e"
@@ -363,8 +376,9 @@
         <Button
             android:id="@+id/button_e"
             style="@style/scientific_button"
-            android:text="e"
             android:background="@color/Grey_100"
+            android:text="e"
+            android:textAllCaps="false"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/button_0"
@@ -375,8 +389,9 @@
         <Button
             android:id="@+id/button_Pi"
             style="@style/scientific_button"
-            android:text="π"
             android:background="@color/Grey_300"
+            android:text="π"
+            android:textAllCaps="false"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_blank"
             app:layout_constraintEnd_toStartOf="@+id/button_1"
@@ -389,10 +404,11 @@
             style="@style/scientific_button"
             android:layout_height="0dp"
             android:background="@color/Grey_200"
-            app:backgroundTint="@null"
-
             android:text="@string/buttonDelete_text"
+            android:textAllCaps="false"
+
             android:textSize="15sp"
+            app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_8"
             app:layout_constraintEnd_toStartOf="@+id/button_percent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -404,9 +420,9 @@
             style="@style/scientific_button"
             android:layout_height="0dp"
             android:background="@color/Grey_200"
-            app:backgroundTint="@null"
-
             android:text="@string/buttonPercent_text"
+
+            app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_9"
             app:layout_constraintEnd_toStartOf="@+id/button_division"
             app:layout_constraintHorizontal_bias="0.5"
@@ -417,8 +433,9 @@
             android:id="@+id/button_log"
             style="@style/scientific_button"
 
-            android:text="lg"
             android:background="@color/Grey_300"
+            android:text="lg"
+            android:textAllCaps="false"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_clear"
             app:layout_constraintEnd_toStartOf="@+id/button_natural_log"
@@ -429,8 +446,9 @@
         <Button
             android:id="@+id/button_natural_log"
             style="@style/scientific_button"
-            android:text="ln"
             android:background="@color/Grey_300"
+            android:text="ln"
+            android:textAllCaps="false"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_delete"
             app:layout_constraintEnd_toStartOf="@+id/button_left_parenthesis"
@@ -441,8 +459,8 @@
         <Button
             android:id="@+id/button_left_parenthesis"
             style="@style/scientific_button"
-            android:text="("
             android:background="@color/Grey_300"
+            android:text="("
             app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_percent"
             app:layout_constraintEnd_toStartOf="@+id/button_right_parenthesis"
@@ -453,8 +471,8 @@
         <Button
             android:id="@+id/button_right_parenthesis"
             style="@style/scientific_button"
-            android:text=")"
             android:background="@color/Grey_300"
+            android:text=")"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_division"
             app:layout_constraintEnd_toEndOf="parent"
@@ -465,8 +483,9 @@
         <Button
             android:id="@+id/button_deg_rad"
             style="@style/scientific_button"
-            android:text="deg"
             android:background="@color/Grey_300"
+            android:text="deg"
+            android:textAllCaps="false"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_log"
             app:layout_constraintEnd_toStartOf="@+id/button_sin"
@@ -477,8 +496,9 @@
         <Button
             android:id="@+id/button_sin"
             style="@style/scientific_button"
-            android:text="sin"
             android:background="@color/Grey_300"
+            android:text="sin"
+            android:textAllCaps="false"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_natural_log"
             app:layout_constraintEnd_toStartOf="@+id/button_cos"
@@ -489,8 +509,9 @@
         <Button
             android:id="@+id/button_cos"
             style="@style/scientific_button"
-            android:text="@string/cos"
             android:background="@color/Grey_300"
+            android:text="@string/cos"
+            android:textAllCaps="false"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_left_parenthesis"
             app:layout_constraintEnd_toStartOf="@+id/button_tan"
@@ -503,6 +524,7 @@
             style="@style/scientific_button"
             android:background="@color/Grey_300"
             android:text="tan"
+            android:textAllCaps="false"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_right_parenthesis"
             app:layout_constraintEnd_toEndOf="parent"
