--- a/app/src/main/res/layout/fragment_interface.xml
+++ b/app/src/main/res/layout/fragment_interface.xml
@@ -209,10 +209,11 @@
             android:id="@+id/button_delete"
             style="@style/calculator_button"
             android:layout_width="0dp"
+            android:textAllCaps="false"
             android:layout_height="0dp"
             android:background="@color/Grey_200"
             android:text="@string/buttonDelete_text"
-            android:textSize="15sp"
+            android:textSize="22sp"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_8"
             app:layout_constraintEnd_toStartOf="@+id/button_percent"
